.provarCaches/00D5f000005vwGkEAI/objects/rstk__sosla__c.object
<CustomObject>
    <description>sosla__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sosla_processid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sosla_processid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sosla_desc__c</fullName>
        <description>Description</description>
        <inlineHelpText>Optional user-defined description up to 50 characters in length.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sosla_processid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sosla_sfslaid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SF Entitlement Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sosla_type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>SLA Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>